packages/build/tests/error/utils/fixtures/fail_plugin_error_option/plugin_two.js
module.exports = {
  name: 'netlify-plugin-two',
  onInit() {
    console.log('onInit')
  },
  onBuild() {
    console.log('onBuild')
  },
}
